<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/log_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_lab_val" />

        <TextView
            android:id="@+id/count_title_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_title_lab_value" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/lion_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lion_button_value" />

            <RadioButton
                android:id="@+id/elephants_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elephants_button_value" />

            <TextView
                android:id="@+id/lions_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lions_count_value" />

            <TextView
                android:id="@+id/elephants_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elephants_count_value" />

            <Button
                android:id="@+id/count_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_btn_value" />

            <Button
                android:id="@+id/quit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quit_btn_val" />

        </RadioGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>