<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-121dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/email_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_lab_value" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_lab_value" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/joueur_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joueur_btn_value" />

            <RadioButton
                android:id="@+id/admin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_btn_value" />

            <Button
                android:id="@+id/log_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_btn_value" />
        </RadioGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>