<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HiddenNumberActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/login_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_lab_val" />

        <EditText
            android:id="@+id/num_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/result_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" " />

        <Button
            android:id="@+id/verif_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verif_btn_val" />

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_btn_val" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>